--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <section class="flash-news">
         <marquee behavior="scroll" direction="left" scrollamount="5">
-          <p>Welcome to Department of Computer Engineering, ZCOER.</p>
+          <p>WEBSITE UNDER DEVELOPMENT!! Welcome to Department of Computer Engineering, ZCOER.</p>
         </marquee>
     </section>
 
